css/main.css
body {
    margin: 0;
    color: white;
    font-family: 'Abel', sans-serif;
    background-color: grey;
}

h1 {
    font-size: 14vmin;
    margin: 0;
    height: 16vh;
}

h2 {
    font-size: 10vmin;
    margin: 0;
    margin-bottom: 1vh;
}

h3 {
    font-size: 5vmin;
    margin: 0;
}

p {
    font-size: 2vmin;
    margin: 0;
}

i {
    height: 100%;
}

li {
    font-size: 2vmin;
}

.page {
    min-height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center; 
    justify-content: center;
}

.content {
    width: 100%;
    background-color: rgba(26, 26, 26, 0.8);
    padding: 5vh 5vw;
}

.button {
    display: flex;
    justify-content: center;
}

.arrow {
    width: 10vmin;
    height: 7vmin;
    cursor: pointer;
    padding-top: 10vmin;
}

.project {
    width: 43%;
    margin: 0.5%;
    padding: 3%;
    display: inline-block;
    background-color: rgba(26, 26, 26, 0.8);
}

.project img {
    width: 100%;
    height: 24.4vw;
    float: left;
    max-height: 30vw;
    border-radius: 2%;
}

.date {
    margin-top: -1vh;
    margin-bottom: 1.5vh;
    font-size: 2.5vh;
    font-style: italic;
}

.school {
    width: 44%;
    float: left;
    display: inline-block;
    padding: 0 3%;
}

#particles-js {
    position: fixed;
    z-index: -1;
    width: 100%;
    height: 100%;
    background-color: #262626;
}

#home .content {
    background-color: transparent;
    text-align: center;
}

#home ul {
    padding: 0;
}

#home li {
    display: inline;
    padding: 0.8vmin;
}

#home ul img {
    width: 5vmin;
    height: 5vmin;
    padding: 0.2vh;
}

#experience ul {
    margin: 0;
}

#projects .content {
    background-color: transparent;
}

#projects h2, #education h2 {
    text-align: center;
}

#projects h3 {
    display: inline-block;
    text-align: center;
    width: 100%;
    padding-top: 6vh;
    padding-bottom: 10vh;
    height: 6vmin;
}

#education ul {
    margin: 0 0 4vh 0;
}

